grammar.js
    file: ($) => seq(optional($._header), repeat1($._module_elem)),
    //TODO i could make a different version of this for when the module is an interface
    _module_elem: ($) =>
      choice(
        $.annotation_type_def,
        $.alias_type_def,
        $.opaque_type_def,
        $.nominal_type_def,
        $.expect,
        alias($._module_value_declaration, $.value_declaration),
        alias($._module_var_declaration, $.var_declaration),
        $.expr_body,
        $.import_expr,
        $.import_file_expr,
      ),

    _module_value_declaration: ($) =>
      seq(
        alias($._assignment_pattern, $.decl_left),
        "=",
        field("body", alias($.expr_body_terminal, $.expr_body)),
      ),

    value_declaration: ($) => seq(optional($.annotation_type_def), $._module_value_declaration),

    expr_body: ($) => $._expr_inner,
    _postfix_expr: ($) =>
      choice(
        $._primary_expr,
        $.field_access_expr,
        $.tuple_access_expr,
        $.function_call_pnc_expr,
        $.suffix_op_expr,
      ),

    _atom_expr: ($) => choice($._postfix_expr, $.prefixed_expression),

    _expr_inner: ($) => choice($.bin_op_expr, $._atom_expr),

    //orginally this had all operators, but it was making the parser almost twice as large so I cut the list down
    parenthesized_expr: ($) => seq("(", field("expression", $.expr_body), ")"),
    if_expr: ($) =>
      prec.right(
        seq(
          "if",
          field("guard", $._expr_inner),
          $.then,
          optional(choice(seq(repeat1($.else_if), optional($.else)), $.else)),
        ),
      ),
    else: ($) => seq("else", $._expr_inner),
    // biome-ignore lint/suspicious/noThenProperty: <explanation>
    then: ($) => seq(field("then", $._expr_inner)),
    field_access_expr: ($) =>
      prec.left(
        PREC.FIELD_ACCESS_START,
        seq(
          field("target", $._postfix_expr),
          choice(
            seq(".", alias(imm(IDENTIFIER), $.identifier)),
            seq(alias(".?", $.optional_access), alias(imm(IDENTIFIER), $.identifier)),
          ),
        ),
      ),

    bin_op_expr: ($) =>
      field(
        "part",
        prec(
          PREC.PART,
          seq(
            $._atom_expr,
            // Keeping operands atomic lets the enclosing repeat own
            // subsequent operators without reopening the expression tier.
            prec.right(repeat1(seq($.operator, $._atom_expr))),
          ),
        ),
      ),
    // Suffixes bind to the nearest postfix expression. Pipelines use the same
    // operand rule as every other operator rather than rebuilding this tier.
    tag_expr: ($) => prec.left(seq($.tag, repeat(seq("(", $._atom_expr, ")")))),
    anon_fun_expr: ($) =>
      prec.left(
        seq("|", field("args", optional($.argument_patterns)), "|", field("body", $.expr_body)),
      ),

    //RECORDS

    _list_body: ($) => sep1_tail(field("exprList", choice($._expr_inner, $.spread_expr)), ","),
    list_expr: ($) => seq("[", optional($._list_body), "]"),

    _tuple_body: ($) =>
      seq(field("expr", $._expr_inner), ",", sep1_tail(field("expr", $._expr_inner), ",")),
    tuple_expr: ($) => seq("(", $._tuple_body, ")"),
    identifier_pattern: ($) => prec(PREC.FIELD_ACCESS_START + 1, $.identifier),
    tag_pattern: ($) =>
      prec.left(
        seq(
          $.tag,
          optional(seq("(", optional(field("args", $._pattern_args)), ")")),
        ),
      ),
    tuple_pattern: ($) => seq("(", $._tuple_pattern_body, ")"),

    _tuple_pattern_body: ($) =>
      seq($._atomic_pattern, ",", optional(sep1_tail($._atomic_pattern, ","))),

    argument_patterns: ($) => $._pattern_args,

    // Tags and lambdas use the same atomic, trailing-comma argument syntax.
    _pattern_args: ($) => sep1_tail($._atomic_pattern, ","),
    _atomic_pattern: ($) =>
      choice(
        "null",
        alias("_", $.wildcard_pattern),
        $.const,
        alias($.string_pattern, $.const_pattern),
        $.identifier_pattern,
        $.list_pattern,
        $.tuple_pattern,
        $.record_pattern,
        prec(2, $.tag_pattern),
        $.nominal_constructor_pattern,
        $.nominal_record_pattern,
        $.mutable_pattern,
        //TODO: this shhouldn't realy be here
        $.spread_pattern,
        $.paren_pattern,

        // :? atomic_type
      ),
    record_pattern: ($) => seq("{", optional($._record_pattern_fields), "}"),

    // Sharing this list avoids duplicating its GLR states for nominal records.
    _record_pattern_fields: ($) =>
      sep1_tail(choice($.spread_pattern, $.record_field_pattern), ","),

    record_field_pattern: ($) => seq($.field_name, optional(seq(":", $._atomic_pattern))),
    //###--------####
    //### HEADER ####
    //###--------###

    _header: ($) => choice($.app_header, $.platform_header, $.module_header, $.package_header),
    package_header: ($) => seq("package", $.provides_list, $.packages_list),
    app_header: ($) => seq("app", $.provides_list, $.packages_list),
    //TODO make this a function for app and platform
    platform_header: ($) => seq("platform", alias($.string, $.name), $.platform_header_body),
    platform_header_body: ($) =>
      seq(
        $.requires,
        $.platform_exposes,
        $.packages,
        $.provides,
        optional($.hosted),
        optional($.targets),
      ),

    module_header: ($) => seq("module", $.exposes_list),

    //TODO: should this actually be a record_pattern?
    packages: ($) => seq("packages", $.record_pattern),

    packages_list: ($) => seq("{", sep_tail(choice($.package_ref, $.platform_ref), ","), "}"),

    package_ref: ($) => seq($.identifier, ":", $.string),
    platform_ref: ($) => seq($.identifier, ":", "platform", alias($.string, $.package_uri)),

    exposes: ($) => seq("exposes", $.exposes_list),
    exposes_list: ($) => seq("exposing", seq("[", sep_tail($.ident, ","), "]")),
    _import_body: ($) =>
      seq(
        choice($.import_ident, $.import_path),
        optional(seq(alias("as", $.as), $.module)),
        optional(alias($.exposes_list, $.exposing)),
      ),
    import_expr: ($) => prec(PREC.IMPORT, seq("import", $._import_body)),
    import_file_expr: ($) =>
      prec(
        PREC.IMPORT,
        seq("import", $.string, seq(alias("as", $.as), $.identifier, ":", $.concrete_type)),
      ),
    //TODO make a function for all these comma separated trailing comma things
    provides: ($) =>
      seq(
        "provides",
        choice(
          seq(
            "[",
            optional($.identifier),
            repeat(seq(",", $.identifier)),
            optional(","),
            "]",
            optional(seq($.to, choice($.string, $.ident))),
          ),
          $.platform_symbol_map,
        ),
      ),

    provides_list: ($) =>
      seq(
        "[",
        optional(choice($.identifier, $.module)),
        repeat(seq(",", choice($.identifier, $.module))),
        optional(","),
        "]",
      ),
    requires: ($) =>
      choice(
        seq("requires", "{", optional($.requires_entries), "}"),
        seq("requires", "{", "}", "{", sep_tail($.typed_ident, ","), "}"),
      ),

    annotation_type_def: ($) => seq($.annotation_pre_colon, ":", $._type_annotation),
    alias_type_def: ($) => seq($.apply_type, ":", field("body", $._type_annotation)),

    _type_annotation: ($) => prec.left(choice($.where_implements, $._non_atomic_type)),
    _atomic_type: ($) =>
      choice(
        $.parenthesized_type,
        $.record_type,
        $.apply_type,
        // $.where_implements,
        // $.implements_implementation,
        $.tags_type,
        $.bound_variable,
        $.inferred,
        "*",
        $.tuple_type,
      ),

    function_type: ($) =>
      seq(
        choice(seq("(", ")"), sep1(field("param", $._atomic_type), ",")),
        $._function_type_result,
      ),

    // Both function forms share the arrow and result after their parameter lists diverge.
    _function_type_result: ($) => seq(choice($.arrow, $.fat_arrow), $._atomic_type),

    parenthesized_type: ($) => seq("(", $._type_annotation, ")"),
    where_implements: ($) =>
      prec.right(
        seq(
          field("type", choice($._atomic_type, $.function_type)),
          alias("where", $.where),
          field("implements", $.static_dispatch_list),
        ),
      ),

    tags_type: ($) => seq("[", optional($._tag_type_entries), "]"),

    // Isolate recursive tag arguments from each surrounding type context.
    _tag_type_entries: ($) => sep1_tail(choice($.tag_type, $.spread_type), ","),

    bound_variable: ($) => alias(token(/_*[\p{Ll}][\p{XID_Continue}]*/), $.bound_variable),

    apply_type: ($) => prec.right(seq($.concrete_type, optional($._apply_type_args))),

    //GOOD
    concrete_type: ($) =>
      prec.right(
        PREC.TYPEALIAS,
        seq($._upper_identifier, repeat(prec(PREC.TYPEALIAS, seq(".", $._upper_identifier)))),
      ),

    //we need a n optional \n to stop this eating the value that follows it
    _apply_type_args: ($) =>
      field(
        "type_args",
        prec.right(seq(imm("("), prec.right(PREC.ARGS, $._apply_type_arg_list), ")")),
      ),

    // Keep recursive type arguments out of each applied-type context.
    apply_type_arg: ($) => prec.left(choice($._atomic_type, $.function_type)),

    typed_ident: ($) => seq($.identifier, ":", $._type_annotation),

    annotation_pre_colon: ($) =>
      choice(
        //TODO implimeent apply $.apply,
        //tag seems not needed when we have alias
        // $.tag,
        $.identifier,
      ),

    //##------------##
    //##-- consts --##
    //##------------##

    const: ($) =>
      choice(
        $.negative_number,
        $._unsigned_number,
        $.char,
        $.typed_string,
        $.string,
        $.multiline_string,
        "false",
        "true",
        // $.unit,
      ),

    _unsigned_number: ($) =>
      choice(
        // Dot-suffix literals must come before their unsuffixed prefixes.
        $.number_with_suffix,
        $.float,
        $.xint,
        $.int,
      ),

    // Roc lexes signed numerals as one token. A narrow external binary-minus
    // token handles the overlapping no-space subtraction form `value-1`.
    string: ($) =>
      seq('"', repeat(choice(imm(prec(0, /[^\n\\"]/)), $.interpolation_char, $.escape_char)), '"'),

    interpolation_char: ($) =>
      seq(
        imm("${"), //This is the new interpolation syntax
        $._expr_inner,
        "}",
      ),
    int: ($) => token(DECIMAL_INTEGER),
    // Modern numeric suffixes use an immediate `.UpperType`, including custom
    // numeric types. The compiler tokenizes the numeric core and suffix together.
    arrow: ($) => "->",
    field_name: ($) => alias($.identifier, $.field_name),

    _long_upper_identifier: ($) =>
      prec.right(seq(optional($._module_prefix), alias($._upper_identifier, $.identifier))),

    // Value and tag paths share the same qualified module prefix.
    ident: ($) => choice($.identifier, $.module),

    identifier: ($) =>
      choice(
        token(prec(101, /\$?_*[\p{Ll}][\p{XID_Continue}]*!/)),
        token(prec(101, /\$?_+[\p{Ll}][\p{XID_Continue}]*/)),
        prec(100, seq(optional("$"), $._lower_identifier)),
      ),

    _lower_identifier: ($) => /[\p{Ll}][\p{XID_Continue}]*/,

    _upper_identifier: ($) => /[\p{Lu}][\p{XID_Continue}]*/,
    tag: ($) => $._long_upper_identifier,
    module: ($) => $._upper_identifier,
    backslash: ($) => "\\",

    doc_comment: ($) => token(prec(-1, /##[^\n]*/)),
    operator: ($) => alias($.operator_identifier, $.operator),
